--- a/css/default.css
+++ b/css/default.css
@@ -1,5 +1,8 @@
-hgroup {
-    font-family: 'Roboto', serif;
+body {
+    font-family: Google Sans Medium, sans-serif;
+    margin-top: -2%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 h1 {
