--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,5 @@
 body {
     font-family: Google Sans Medium, sans-serif;
-    margin-top: -2%;
-    margin-left: 1%;
-    margin-right: 1%;
 }
 
 h1 {
@@ -26,25 +23,19 @@ p.footer {
     font-size: 12px;
 }
 
-img#icone {
-    block-size: 75px;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 30%;
+nav#header {
+    margin-top: 0%;
+    padding-top: 1%;
+    padding-left: 3%;
+    padding-right: 3%;
+    border-bottom: 1px solid gray;
 }
 
-div#header {
-    margin-top: 0%;
-    padding-left: 3%;
-    padding-right: 3%;
-    border-bottom: 1pt solid gray;
-}
-div#head {
-    margin-left: 0%;
-}
 div#body {
-    padding-left: 3%;
-    padding-right: 3%;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3%;
 }
 
 h1#title {
@@ -61,11 +52,22 @@ form {
 }
 
 @media only screen and (max-width: 600px) {
-    div#header {
+    a#header {
         text-align: center;
-        margin-top: -3%;
+        padding-top: 3%;
+        padding-left: 22%;
     }
     h1#title {
         margin-top: 5%;
+    }
+    button#nav-button {
+        margin-left: -1%;
+        margin-top: 3%;
+        position: absolute;
+        border: 0pt;
+    }
+
+    div#body-title {
+        padding-top: 10%;
     }
 }
